--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 30px;
   left: 30px;
-  max-width: 48px;
+  min-width: 48px;
   max-height: 48px;
 
   &_colored {
