--- a/src/components/review/review.scss
+++ b/src/components/review/review.scss
@@ -45,9 +45,8 @@
     align-items: flex-start;
   }
 
-  &__like {
-    margin-top: 5px;
-    margin-right: 15px;
+  &__like-wrap {
+    margin-right: 10px;
     margin-left: 5px;
   }
 
