--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -35,6 +35,7 @@
 
   &__description {
     padding-bottom: 20px;
+    overflow-wrap: break-word;
     font-size: 14px;
     line-height: 24px;
     text-align: right;
